# pyproject_common

./: README.md  makefile-include  pre-commit  pyproject.toml.append  setup.sh
template/: pyproject.toml
